@@ -10,6 +10,7 @@ ver 0.19.3 (not yet released)
   - audiofile: fix bit rate calculation
   - ffmpeg: support opus
   - opus: fix bogus duration on streams
+  - opus: support chained streams
   - opus: improved error logging
 * fix distorted audio with soxr resampler
 * fix build failure on Mac OS X with non-Apple compilers
